--- a/IoT.WCD.BlockChain.Infrastructure.IoC.Contracts/IoT.WCD.BlockChain.Infrastructure.IoC.Contracts.csproj
+++ b/IoT.WCD.BlockChain.Infrastructure.IoC.Contracts/IoT.WCD.BlockChain.Infrastructure.IoC.Contracts.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{64EA9BB9-FACE-4FE6-A46A-E50E722299E5}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <RootNamespace>IoT.WCD.BlockChain.Infrastructure.IoC.Contracts</RootNamespace>
     <AssemblyName>IoT.WCD.BlockChain.Infrastructure.IoC.Contracts</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -53,7 +56,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IocContainer.cs" />
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
